tests/include_suppressed/include_suppressed.exp
Without --include-suppressed
Error: test.js:3
  3: (123: string); // Normal error
      ^^^ number. This type is incompatible with
  3: (123: string); // Normal error
           ^^^^^^ string

Warning: test.js:8
  8: // $FlowFixMe - unused suppression comment
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Error suppressing comment. Unused suppression


Found 1 error and 1 warning


With --include-suppressed
Error: test.js:3
  3: (123: string); // Normal error
      ^^^ number. This type is incompatible with
  3: (123: string); // Normal error
           ^^^^^^ string

Error: test.js:6
  6: (123: string); // Suppressed error
      ^^^ number. This type is incompatible with
  6: (123: string); // Suppressed error
           ^^^^^^ string

Warning: test.js:8
  8: // $FlowFixMe - unused suppression comment
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Error suppressing comment. Unused suppression


Found 2 errors and 1 warning


JSON without --include-suppressed
{
  "errors":[
    {
      "kind":"infer",
      "level":"error",
      "suppressions":[],
      "message":[
        {
          "context":"(123: string); // Normal error",
          "descr":"number",
          "type":"Blame",
          "loc":{
            "source":"test.js",
            "type":"SourceFile",
            "start":{"line":3,"column":2,"offset":11},
            "end":{"line":3,"column":4,"offset":14}
          },
          "path":"test.js",
          "line":3,
          "endline":3,
          "start":2,
          "end":4
        },
        {
          "context":null,
          "descr":"This type is incompatible with",
          "type":"Comment",
          "path":"",
          "line":0,
          "endline":0,
          "start":1,
          "end":0
        },
        {
          "context":"(123: string); // Normal error",
          "descr":"string",
          "type":"Blame",
          "loc":{
            "source":"test.js",
            "type":"SourceFile",
            "start":{"line":3,"column":7,"offset":16},
            "end":{"line":3,"column":12,"offset":22}
          },
          "path":"test.js",
          "line":3,
          "endline":3,
          "start":7,
          "end":12
        }
      ]
    },
    {
      "kind":"infer",
      "level":"warning",
      "suppressions":[],
      "message":[
        {
          "context":"// $FlowFixMe - unused suppression comment",
          "descr":"Error suppressing comment",
          "type":"Blame",
          "loc":{
            "source":"test.js",
            "type":"SourceFile",
            "start":{"line":8,"column":1,"offset":92},
            "end":{"line":8,"column":42,"offset":134}
          },
          "path":"test.js",
          "line":8,
          "endline":8,
          "start":1,
          "end":42
        },
        {
          "context":null,
          "descr":"Unused suppression",
          "type":"Comment",
          "path":"",
          "line":0,
          "endline":0,
          "start":1,
          "end":0
        }
      ]
    }
  ],
  "passed":false
}


JSON with --include-suppressed
{
  "errors":[
    {
      "kind":"infer",
      "level":"error",
      "suppressions":[],
      "message":[
        {
          "context":"(123: string); // Normal error",
          "descr":"number",
          "type":"Blame",
          "loc":{
            "source":"test.js",
            "type":"SourceFile",
            "start":{"line":3,"column":2,"offset":11},
            "end":{"line":3,"column":4,"offset":14}
          },
          "path":"test.js",
          "line":3,
          "endline":3,
          "start":2,
          "end":4
        },
        {
          "context":null,
          "descr":"This type is incompatible with",
          "type":"Comment",
          "path":"",
          "line":0,
          "endline":0,
          "start":1,
          "end":0
        },
        {
          "context":"(123: string); // Normal error",
          "descr":"string",
          "type":"Blame",
          "loc":{
            "source":"test.js",
            "type":"SourceFile",
            "start":{"line":3,"column":7,"offset":16},
            "end":{"line":3,"column":12,"offset":22}
          },
          "path":"test.js",
          "line":3,
          "endline":3,
          "start":7,
          "end":12
        }
      ]
    },
    {
      "kind":"infer",
      "level":"warning",
      "suppressions":[],
      "message":[
        {
          "context":"// $FlowFixMe - unused suppression comment",
          "descr":"Error suppressing comment",
          "type":"Blame",
          "loc":{
            "source":"test.js",
            "type":"SourceFile",
            "start":{"line":8,"column":1,"offset":92},
            "end":{"line":8,"column":42,"offset":134}
          },
          "path":"test.js",
          "line":8,
          "endline":8,
          "start":1,
          "end":42
        },
        {
          "context":null,
          "descr":"Unused suppression",
          "type":"Comment",
          "path":"",
          "line":0,
          "endline":0,
          "start":1,
          "end":0
        }
      ]
    },
    {
      "kind":"infer",
      "level":"error",
      "suppressions":[
        {
          "loc":{
            "source":"test.js",
            "type":"SourceFile",
            "start":{"line":5,"column":1,"offset":42},
            "end":{"line":5,"column":13,"offset":55}
          }
        }
      ],
      "message":[
        {
          "context":"(123: string); // Suppressed error",
          "descr":"number",
          "type":"Blame",
          "loc":{
            "source":"test.js",
            "type":"SourceFile",
            "start":{"line":6,"column":2,"offset":57},
            "end":{"line":6,"column":4,"offset":60}
          },
          "path":"test.js",
          "line":6,
          "endline":6,
          "start":2,
          "end":4
        },
        {
          "context":null,
          "descr":"This type is incompatible with",
          "type":"Comment",
          "path":"",
          "line":0,
          "endline":0,
          "start":1,
          "end":0
        },
        {
          "context":"(123: string); // Suppressed error",
          "descr":"string",
          "type":"Blame",
          "loc":{
            "source":"test.js",
            "type":"SourceFile",
            "start":{"line":6,"column":7,"offset":62},
            "end":{"line":6,"column":12,"offset":68}
          },
          "path":"test.js",
          "line":6,
          "endline":6,
          "start":7,
          "end":12
        }
      ]
    }
  ],
  "passed":false
}

